[package]
name = "serde_eth"
version = "0.1.1"
authors = ["Mason Fischer <mason@kissr.co>"]
license = "MIT OR Apache-2.0"
description = "Ethereum ABI encoder for serde"
repository = "https://github.com/ellipticoin/serde-eth"
keywords = ["serde", "eth", "ethereum"]
categories = ["encoding"]
edition = "2018"

[dependencies]
heck = "0.3.2"
hex-literal = "0.3.3"
num-bigint = { version = "0.4.2", features = ["serde"]}
num-traits = "0.2.14"
serde = "1.0.123"
serde_bytes = "0.11.5"
sha3 = "0.9.1"

[dev-dependencies]
serde = { version = "1.0.123", features = ["derive"] }
hex = "0.4.2"
